Migrate to using the Google Cloud Libraries Bill of Materials (BOM)
https://cloud.google.com/java/docs/bom

--- a/google-analytics-admin/pom.xml
+++ b/google-analytics-admin/pom.xml
@@ -23,11 +23,22 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
+  <dependencyManagement>
+    <dependencies>
+      <dependency>
+        <groupId>com.google.cloud</groupId>
+        <artifactId>libraries-bom</artifactId>
+        <version>26.24.0</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+    </dependencies>
+  </dependencyManagement>
+
   <dependencies>
     <dependency>
       <groupId>com.google.analytics</groupId>
       <artifactId>google-analytics-admin</artifactId>
-      <version>0.13.5</version><!-- {x-version-update:google-analytics-admin:current} -->
     </dependency>
 
     <dependency>
