--- a/google-analytics-data/pom.xml
+++ b/google-analytics-data/pom.xml
@@ -6,6 +6,12 @@
   <packaging>jar</packaging>
   <name>Google Analytics Data Snippets</name>
   <url>https://github.com/googleapis/java-docs-samples</url>
+  <licenses>
+    <license>
+      <name>The Apache License, Version 2.0</name>
+      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+    </license>
+  </licenses>
 
   <!--
     The parent pom defines common style checks and testing strategies for our samples.
